@@ -1,0 +1,1 @@
+usr/lib/*/libcogl-gst.so.*
